--- a/src/client/assets/stylesheets/create.css
+++ b/src/client/assets/stylesheets/create.css
@@ -3,7 +3,7 @@
 /* -------------------  MOBILE  --------------------- */
 
 header {
-	background-image: url('https://via.placeholder.com/1150');
+	background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Banco_de_peces_trompeta_%28Macroramphosus_scolopax%29%2C_islas_Azores%2C_Portugal%2C_2020-07-27%2C_DD_40.jpg/1197px-Banco_de_peces_trompeta_%28Macroramphosus_scolopax%29%2C_islas_Azores%2C_Portugal%2C_2020-07-27%2C_DD_40.jpg');
 }
 
 
